--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* background-image: url("https://images.pexels.com/photos/616401/pexels-photo-616401.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"); */
+  /* background-repeat: no-repeat; */
+  background-color: #d6f7ba;
 }
 /*-------------------- whole body section------------------------------ */
 body{
@@ -13,6 +16,8 @@ body{
   height: 100vh;
   background-blend-mode: multiply;
   background-attachment: fixed;
+   background-image: url("https://images.pexels.com/photos/616401/pexels-photo-616401.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+  background-repeat: no-repeat;
   
    
 }
